--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,12 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: node -v
+    # Installs Sigma CLI
+    - name: Install Sigma CLI
+      run: npm i slappforge-sigma-cli -g
+    
+    - name: Validate Project
+      run: sigma validate
 
     # Runs a set of commands using the runners shell
 #     - name: Run a multi-line script
