--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,12 @@ jobs:
     - uses: actions/checkout@v2
     
     # Set permissions to global node_modules directory
-    - name: Set permissions to node_modules directory
-      run: sudo chown -R $USER /usr/local/lib/node_modules
+    - name: Set permissions to global node directories
+      run: |
+        sudo chown -R $USER /usr/local/lib/node_modules
+        ls -l /usr/local/lib/node_modules
+        sudo chown -R $USER /usr/local/bin
+        ls -l /usr/local/bin
 
     # Installs Sigma CLI
     - name: Install Sigma CLI
