--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,8 @@ jobs:
     - name: Install Sigma CLI
       run: npm i slappforge-sigma-cli -g
     
-    - name: Validate Project
-      run: sigma validate
+    - name: Build Project
+      run: sigma build
 
     # Runs a set of commands using the runners shell
 #     - name: Run a multi-line script
