--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,9 +33,12 @@ jobs:
     # Installs Sigma CLI
     - name: Install Sigma CLI
       run: sudo npm i slappforge-sigma-cli -g
+      
+    - name: Checking PIP version
+      run: pip --version
     
-    - name: Build Project
-      run: sigma build
+#     - name: Build Project
+#       run: sigma build
 
     # Runs a set of commands using the runners shell
 #     - name: Run a multi-line script
